# autohour

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
holidays/: 2026.json
packaging/macos/: AppIcon.icns  Autohour  Info.plist
scripts/: build-macos-app.sh  generate-placeholder-icon.sh
src/: main.rs
