[package]
name = "autohour"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
cookie_store = "0.21"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "hostname", "rustls-tls"] }
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "rustls-tls"] }
reqwest_cookie_store = "0.8"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
scraper = "0.23"
serde_urlencoded = "0.7"
tempfile = "3"
url = "2"
urlencoding = "2"
fs2 = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
tao = "0.34"
tray-icon = "0.21"
